--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <body>
   <h1>Jonathan Ramirez</h1>
   <p>Welcome to my first website!</p>
+  <span> I love you beautiful! :* </span>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
 
