--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 
 <body>
   <h1>Jonathan Ramirez</h1>
-  <p>Welcome to my first website!</p>
-  <span> I love you beautiful! :* </span>
+  <p>Welcome to my first website!
+      I love you beautiful! ;* </p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
 
